--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
