--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.19.9",
+    "@supabase/supabase-js": "^2.45.6",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
